# spacedb

./: .gitignore  Cargo.toml  flake.nix  main.py  norads_ca_alt_csv.py  pyproject.toml  space_objects.py
data/: state.json
examples/: quick_test_config.toml  value_config.toml
src/: analysis.rs  main.rs
src/data/: loader.rs  mod.rs  search.rs  space_object.rs
src/propagation/: mod.rs  orbit_track.rs  propagator.rs
src/propagation/hifi/: hifi_propagator.rs  integrator.rs  mod.rs  settings.rs  state.rs
src/propagation/hifi/atmosphere/: exponential.rs  harris_priester.rs  jb2008.rs  lookup.rs  mod.rs  nrlmsise00.rs
src/propagation/hifi/forces/: drag.rs  gravity.rs  mod.rs  srp.rs  third_body.rs
src/renderer/: camera.rs  earth.rs  mod.rs  pipeline.rs  satellites.rs  scene.rs  textures.rs  wgpu_callback.rs
src/ui/: mod.rs  panels.rs  time_controls.rs
