[package]
name = "spacedb"
version = "0.1.0"
edition = "2021"
description = "Space object database visualizer with orbital mechanics"
license = "MIT"

[dependencies]
# GUI framework with proper platform features
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "wgpu",
    "x11",
    "wayland",
] }
egui = "0.33"
egui-wgpu = "0.33"
wgpu = "27"

# Orbital mechanics
satkit = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression (for gzipped indexes)
flate2 = "1.0"

# Image/texture loading
image = { version = "0.25", features = ["jpeg", "png", "tiff", "hdr", "exr"] }

# 3D math
nalgebra = "0.34"
glam = { version = "0.29", features = ["bytemuck"] }

# GPU buffer utilities
bytemuck = { version = "1.0", features = ["derive"] }
half = { version = "2.3", features = ["bytemuck"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Misc utilities
anyhow = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
chrono = "0.4"
nucleo = "0.5.0"
clap = { version = "4.5.54", features = ["derive"] }
indicatif = "0.18.3"
nyx-space = "2.2.0"
anise = "0.9.1"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1
incremental = false
